<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RememberAnyOne</string>
    <string name="action_settings">Settings</string>
    <string name="add_user">Add New Person</string>
    <string name="view_all_user">View All Persons</string>
    <string name="welcome">Welcome</string>
    <string name="choose">Choose An Option</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_update">Update</string>
    <string name="name_eachuser">Name:</string>
    <string name="email_eachuser">Email:</string>
    <string name="age_eachuser">Age:</string>
    <string name="mobile_eachuser">Mobile No. :</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_age">Age:</string>
    <string name="enter_email">Enter E-mail:</string>
    <string name="enter_mobno">Enter Mob.No. </string>
    <string name="enter_credentials">Enter Your Credentials</string>
    <string name="select_dob">Select DOB</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="canceltext">Cancel</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="mobno">Mobile No.</string>
    <string name="dob">Date of Birth:</string>
    <string name="email">Email:</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="take_new_photo">Take New Photo</string>
    <string name="noUsers">No Users Available</string>
    <string name="options_dot">&#8942;</string>
    <string name="dashes">--</string>
    <string name="remember_any_one">Remember Any One</string>
    <string name="zero">0</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="login_with_nmobile_number">Login with \nMobile number</string>
    <string name="plus_91">+91</string>
    <string name="type_your_number">Type your number</string>
    <string name="send_otp">Send otp</string>
    <string name="signout">Sign Out</string>
    <string name="default_notification_channel_id">1</string>
    <string name="signInWithGoogle">Sign in with Google</string>
    <string name="server_client_id">1073578592805-410j7ue3a2e95idr8vplarjp8uq4gc7b.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="select_photo">Select Photo</string>

</resources>