<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="4dp"
        android:longClickable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F58C"
            android:padding="7dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtUserId"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:visibility="invisible" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img"
                android:layout_width="99dp"
                android:layout_height="133dp"
                android:layout_margin="3dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/img"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtName"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/img"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEmail"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/img"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtMobNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAge"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@id/img"
                android:text="@string/mobno"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMobNo"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/img"
                android:text="@string/dob"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>