<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.fastturtle.rememberMe.activities.DashBoardActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddUser"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/button_round"
        android:text="@string/add_user"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWhatToDo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewWhatToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/choose"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonViewUser"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_round"
        android:text="@string/view_all_user"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonAddUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonAddUser"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddUser" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignOut"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/signout"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>