<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone_auth" />

    <ProgressBar
        android:id="@+id/phoneProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/btn_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/login_with_nmobile_number"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
        app:layout_constraintTop_toBottomOf="@id/phoneProgressBar" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:paddingStart="8dp"
        android:text="@string/plus_91"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/phoneEditTextNumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/type_your_number"
        android:inputType="number"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:textColorHint="#606060"
        app:layout_constraintBottom_toBottomOf="@id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2" />

    <Button
        android:id="@+id/sendOTPBtn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/send_otp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneEditTextNumber" />

    <EditText
        android:id="@+id/otpEditText1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/otpEditText2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/otpEditText3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpEditText1"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/otpEditText3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/otpEditText4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpEditText2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/otpEditText4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/otpEditText5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpEditText3"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />


    <EditText
        android:id="@+id/otpEditText5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/otpEditText6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpEditText4"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:layout_editor_absoluteY="198dp" />


    <EditText
        android:id="@+id/otpEditText6"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/otpEditText5"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <TextView
        android:id="@+id/resendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/resend_otp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/verifyOTPBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/otpEditText6"
        app:layout_constraintTop_toBottomOf="@id/guideline5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="Sign in with: "
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/signInButton"
        app:layout_constraintEnd_toStartOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/guideline5" />

    <Button
        android:id="@+id/verifyOTPBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/verify"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>